Various css fixes
* Margins for headings and right-aligned paragraphs in tei-texts
* Font-family for milestone blocks
* Fixed line height and margins for left menu items so text in with Roboto font won't be cut off at top

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -769,7 +769,16 @@ ion-icon.menu-download{
 }
 
 ion-list.accordion-menu{
-  margin: 0px !important;
+  margin: 0 !important;
+}
+
+ion-menu .item-md ion-label.label > p {
+  margin: 0;
+  line-height: 1.5;
+}
+
+ion-menu .item-md ion-label.label {
+  margin: 11px 8px 11px 0;
 }
 
 .shadow{
