--- a/src/components/table-of-contents-accordion/table-of-contents-accordion.scss
+++ b/src/components/table-of-contents-accordion/table-of-contents-accordion.scss
@@ -180,6 +180,7 @@ table-of-contents-accordion {
         color: #515151;
         font-weight: normal !important;
         font-size: 0.875rem;
+        line-height: 1.3 !important;
     }
 
     div.aboutMarkdown ion-item {
